Fixed pagination mobile style. Added base url link. Added click on logo event to return to the landing page.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ nav{
 nav img{
     width: 150px;
     margin: 20px;
+    cursor: pointer;
 }
 .controls{
     display: flex;
@@ -180,6 +181,18 @@ nav img{
         width: 90%;
         max-width: 100%; 
         height: auto; 
+    }
+    .page-numbers button{
+        padding: 7px 10px;
+        margin: 0 5px;
+        cursor: pointer;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .pagination-button{
+        padding: 7px;
+        margin: 7px;
     }
 
    
